src/tools/moc/main.cpp
@@ -359,11 +359,9 @@ int runMoc(int _argc, char **_argv)
 
 
     if (autoInclude) {
+        int spos = filename.lastIndexOf(QDir::separator().toLatin1());
         int ppos = filename.lastIndexOf('.');
-        moc.noInclude = (ppos >= 0
-                         && tolower(filename[ppos + 1]) != 'h'
-                         && tolower(filename[ppos + 1]) != QDir::separator().toLatin1()
-                        );
+        moc.noInclude = ppos > spos && ppos >= 0 && tolower(filename[ppos + 1]) != 'h';
     }
     if (moc.includeFiles.isEmpty()) {
         if (moc.includePath.isEmpty()) {
